--- a/assets/Icons/Icons-g/icons.html
+++ b/assets/Icons/Icons-g/icons.html
@@ -67,6 +67,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-instagram"></i>
+            </span>
+            <br>
+            <span class='label'>instagram</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-mqas"></i>
             </span>
             <br>
@@ -98,6 +107,24 @@
             </span>
             <br>
             <span class='label'>search</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-twitter"></i>
+            </span>
+            <br>
+            <span class='label'>twitter</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-youtube"></i>
+            </span>
+            <br>
+            <span class='label'>youtube</span>
         </div>
 
 
