--- a/assets/Icons/Icons-g/icons.html
+++ b/assets/Icons/Icons-g/icons.html
@@ -67,37 +67,10 @@
 
         <div class="preview">
             <span class="inner">
-                <i class="icon icon-instagram"></i>
+                <i class="icon icon-arrow-right"></i>
             </span>
             <br>
-            <span class='label'>instagram</span>
-        </div>
-
-
-        <div class="preview">
-            <span class="inner">
-                <i class="icon icon-mqas"></i>
-            </span>
-            <br>
-            <span class='label'>mqas</span>
-        </div>
-
-
-        <div class="preview">
-            <span class="inner">
-                <i class="icon icon-power"></i>
-            </span>
-            <br>
-            <span class='label'>power</span>
-        </div>
-
-
-        <div class="preview">
-            <span class="inner">
-                <i class="icon icon-prise"></i>
-            </span>
-            <br>
-            <span class='label'>prise</span>
+            <span class='label'>arrow-right</span>
         </div>
 
 
@@ -112,19 +85,55 @@
 
         <div class="preview">
             <span class="inner">
-                <i class="icon icon-twitter"></i>
+                <i class="icon icon-sm-facebook"></i>
             </span>
             <br>
-            <span class='label'>twitter</span>
+            <span class='label'>sm-facebook</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="icon icon-youtube"></i>
+                <i class="icon icon-sm-instagram"></i>
             </span>
             <br>
-            <span class='label'>youtube</span>
+            <span class='label'>sm-instagram</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-sm-twitter"></i>
+            </span>
+            <br>
+            <span class='label'>sm-twitter</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-testing-mqas"></i>
+            </span>
+            <br>
+            <span class='label'>testing-mqas</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-testing-power"></i>
+            </span>
+            <br>
+            <span class='label'>testing-power</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-testing-prise"></i>
+            </span>
+            <br>
+            <span class='label'>testing-prise</span>
         </div>
 
 
