--- a/Icons/Icons-g/icons.html
+++ b/Icons/Icons-g/icons.html
@@ -76,6 +76,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-christmas-gift"></i>
+            </span>
+            <br>
+            <span class='label'>christmas-gift</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-search"></i>
             </span>
             <br>
