Footer DONE & fixing some performance issues

--- a/Icons/Icons-g/icons.html
+++ b/Icons/Icons-g/icons.html
@@ -85,6 +85,42 @@
 
         <div class="preview">
             <span class="inner">
+                <i class="icon icon-christmas-christmas-1"></i>
+            </span>
+            <br>
+            <span class='label'>christmas-christmas-1</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-christmas-christmas-2"></i>
+            </span>
+            <br>
+            <span class='label'>christmas-christmas-2</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-christmas-christmas-3"></i>
+            </span>
+            <br>
+            <span class='label'>christmas-christmas-3</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class="icon icon-christmas-christmas-4"></i>
+            </span>
+            <br>
+            <span class='label'>christmas-christmas-4</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class="icon icon-christmas-gift"></i>
             </span>
             <br>
